--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -168,14 +168,16 @@ At a high level, fixed-grid methods have the following construction steps \cite{
 \end{enumerate}
 Particular details of how nodes are sorted, the choice of hashing function, the number of nodes allowed per cell, etc. determine the specific class of fixed-grid method and corresponding complexity. A comprehensive list of options and classifications can be found in \cite{Samet2005}. 
 
-The implementation in this work is inspired by fixed-grid approaches for GPU particle simulations (\cite{Krog2010,Green2010,Johnson2011}). Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is competitive for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to their spatial hash reside closer in memory to their nearest neighbors than unsorted nodes, resulting in a higher likelihood that data will be cached when required. Note that sorting by cell hash also ensures that all nodes contained within a cell are contiguous in memory, so querying nodes of a cell requires an offset to starting node index and iterating over the correct number of indices contained in the cell.
+The implementation in this work is inspired by fixed-grid approaches for GPU particle simulations (\cite{Krog2010,Green2010,Johnson2011}). Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is competitive for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to their spatial hash reside closer in memory to their nearest neighbors than unsorted nodes, resulting in a higher likelihood that data will be cached when required. Note that sorting by cell hash sorts nodes across cells but not within them---that is, nodes contained by the same cell end up contiguous in memory, but they are not reordered with respect one another. Fortunately, with contiguous groups of nodes, querying is possible by stepping directly to the starting node index for teh cell and iterating over the correct number of indices. 
 
 
-The authors of \cite{Krog2010,Johnson2011,Green2010} assume a raster-ordering on cells, and that the uniform grid is refined enough to ensure cells contain at most eight nodes. Particle interactions are limited to ball queries on the containing cell plus one valence of neighboring cells (i.e., 8 surrounding cells in 2-D and 26 cells in 3-D). Since the number of cells to check is fixed, the neighboring nodes can be obtained by direct access in constant time. As a point of difference in implementations, the authors of \cite{Green2010, Krog2010} utilize a fast radix sort algorithm based on hash index to order nodes, while \cite{Johnson2011} leverage a slower bitonic sort algorithm. 
+The authors of \cite{Krog2010,Johnson2011,Green2010} assume a raster-ordering on cells, and that the uniform grid is refined enough to ensure cells contain at most eight nodes. Particle interactions are limited to ball queries on the containing cell plus one valence of neighboring cells (i.e., 8 surrounding cells in 2-D and 26 cells in 3-D). Since the number of cells to check is fixed, the neighboring nodes can be obtained by direct access in constant time. As a point of difference in implementations, the authors of \cite{Green2010, Krog2010} leverage a fast radix sort algorithm based on hash index to order nodes, while \cite{Johnson2011} utilizes a slower bitonic sort algorithm. The fixed-grid in \cite{Wendland2002,WendlandBook} forgoes the logic to refine the fixed-grid to enforce a maximum limit on the number of nodes per cell, which allows user specified resolutions to allow arbitrary numbers of nodes per cell. The author also avoids sorting nodes based on cell hashes. Instead, a list is maintained for each cell that has the indices of all contained nodes. Unfortunately, iterating through those lists implies random access on memory.    
 
-In comparison to related work, the implementation presented here also assumes a raster-ordering of cells, but forgoes the logic to refine the fixed-grid and restrict the max number of nodes per cell. Without the logic, the fixed-grid resolution is user controlled. Rather than a radix or bitonic sort, a single iteration of bucket sort is employed to sort nodes across cells but not within them---that is, nodes within a cell end up contiguous in memory but are not reordered with respect one another. Finally, querying neighbors is not limited to one valence of neighboring cells. Instead, the query process for each node iteratively increases the query radius to add a full valence of cells. The iterative search continues until the desired number of neighboring nodes is satisfied. 
 
-The algorithm employed here would be classified by \cite{Samet2005} as a \emph{fixed-grid bucket method with one-dimensional ordering}. The term \emph{bucket} refers to the allowance for each cell to contain an arbitrary number of nodes. The \emph{one-dimensional ordering} is indicative of attempts later in this chapter to employ alternative space-filling curves in place of raster-ordering.   
+The implementation presented here is a hybrid of the related algorithms. For example, this implementation opts to sort cells based on raster-ordering, but drops the restriction on max number of nodes per cell. Rather than a radix- or bitonic sort to reorder nodes, the list of node indices for each cell (\cite{Wendland2002,WendlandBook}) is constructed as part of a single-pass bucket sort. Finally, in stark contrast to  \cite{Krog2010,Green2010,Johnson2011,Wendland2002,WendlandBook}, querying neighbors is not restricted to a fixed number of cell valences. To satisfy the $k$-NN query, this implementation iteratively increases the query radius to include a new valence of cells at each iteration. The iteration terminates when the desired count of neighboring nodes is satisfied or exceeded.  
+
+This implementation would be classified by \cite{Samet2005} as a \emph{fixed-grid bucket method with one-dimensional ordering}. The term \emph{bucket} refers to the allowance for each cell to contain an arbitrary number of nodes. The \emph{one-dimensional ordering} is indicative of attempts later in this chapter to employ alternative space-filling curves in place of raster-ordering.   
+
 
 
 Algorithm~\ref{alg:fixed_grid_build} presents the process to build the data structures necessary for the fixed-grid method. 
